--- a/style.css
+++ b/style.css
@@ -3,9 +3,31 @@
     overflow: hidden;
     width:100vw;
     background: linear-gradient(110deg, #a60af3 50%, rgba(0, 0, 0, 0) 30%), radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
+
+    display: flex;
+    align-items: center;
+}
+@media screen and (min-width: 601px) {
+    .description {
+        font-size: 1.5vw;
+    }
+}
+@media screen and (max-width: 600px) {
+    .description {
+        font-size: 2vw;
+    }
+}
+@media screen and (min-width: 800px) {
+    .description {
+        font-size: 1.5vw;
+    }
 }
 
 .description {
-    font-size: 2.3vw;
+    /* font-size: 2.3vw; */
     font-weight: bolder;
+}
+@media screen{
+.desc {
+}
 }
